{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 535,
  "lineage": "0c90cd53-3d39-0f89-334b-864e98518e9e",
  "resources": [
    {
      "module": "module.fortigates",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "172.20.0.1",
            "id": "projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-external-sb",
            "ip_cidr_range": "172.20.0.0/24",
            "name": "bm-mantis834748-external-sb",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-external-vpc",
            "private_ip_google_access": false,
            "project": "forti-emea-se",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-external-sb"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "172.20.1.1",
            "id": "projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-internal-sb",
            "ip_cidr_range": "172.20.1.0/24",
            "name": "bm-mantis834748-internal-sb",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-internal-vpc",
            "private_ip_google_access": false,
            "project": "forti-emea-se",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-internal-sb"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "172.20.2.1",
            "id": "projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-hasync-sb",
            "ip_cidr_range": "172.20.2.0/24",
            "name": "bm-mantis834748-hasync-sb",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-hasync-vpc",
            "private_ip_google_access": false,
            "project": "forti-emea-se",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-hasync-sb"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "172.20.3.1",
            "id": "projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-mgmt-sb",
            "ip_cidr_range": "172.20.3.0/24",
            "name": "bm-mantis834748-mgmt-sb",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-mgmt-vpc",
            "private_ip_google_access": false,
            "project": "forti-emea-se",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-mgmt-sb"
          }
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ext_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.0.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-08-19T02:07:52.624-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip1-untrust-us-central1",
            "name": "bm-mantis834748-ip1-untrust-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip1-untrust-us-central1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-external-sb"
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.0.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-08-19T02:07:52.490-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip2-untrust-us-central1",
            "name": "bm-mantis834748-ip2-untrust-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip2-untrust-us-central1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-external-sb"
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "hasync_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.2.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-08-19T02:07:53.688-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip1-hasync-us-central1",
            "name": "bm-mantis834748-ip1-hasync-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip1-hasync-us-central1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-hasync-sb"
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.2.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-08-19T02:07:55.888-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip2-hasync-us-central1",
            "name": "bm-mantis834748-ip2-hasync-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip2-hasync-us-central1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-hasync-sb"
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "172.20.1.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-08-19T02:07:53.388-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip-ilb-trust-us-central1",
            "name": "bm-mantis834748-ip-ilb-trust-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip-ilb-trust-us-central1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-internal-sb"
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "int_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.1.4",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-08-19T02:07:53.511-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip1-trust-us-central1",
            "name": "bm-mantis834748-ip1-trust-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip1-trust-us-central1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-internal-sb"
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.1.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-08-19T02:07:53.101-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip2-trust-us-central1",
            "name": "bm-mantis834748-ip2-trust-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip2-trust-us-central1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-internal-sb"
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mgmt_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.3.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-08-19T02:08:04.283-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip1-mgmt-us-central1",
            "name": "bm-mantis834748-ip1-mgmt-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip1-mgmt-us-central1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-mgmt-sb"
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.3.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-08-19T02:08:04.306-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip2-mgmt-us-central1",
            "name": "bm-mantis834748-ip2-mgmt-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-ip2-mgmt-us-central1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-mgmt-sb"
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mgmt_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.193.3.8",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-08-19T02:07:52.209-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-eip1-mgmt-us-central1",
            "name": "bm-mantis834748-eip1-mgmt-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-eip1-mgmt-us-central1"
          },
          "dependencies": [
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "34.72.161.73",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-08-19T02:07:52.096-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-eip2-mgmt-us-central1",
            "name": "bm-mantis834748-eip2-mgmt-us-central1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/addresses/bm-mantis834748-eip2-mgmt-us-central1"
          },
          "dependencies": [
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-hasync",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-08-19T02:07:53.666-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/forti-emea-se/global/firewalls/bm-mantis834748-fw-hasync-allow-fgt",
            "log_config": [],
            "name": "bm-mantis834748-fw-hasync-allow-fgt",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-hasync-vpc",
            "priority": 1000,
            "project": "forti-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/firewalls/bm-mantis834748-fw-hasync-allow-fgt",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "fgt"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "fgt"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-08-19T02:08:04.204-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/forti-emea-se/global/firewalls/bm-mantis834748-fw-mgmt-allow-admin",
            "log_config": [],
            "name": "bm-mantis834748-fw-mgmt-allow-admin",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-mgmt-vpc",
            "priority": 1000,
            "project": "forti-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/firewalls/bm-mantis834748-fw-mgmt-allow-admin",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "fgt"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-port1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-08-19T02:07:52.480-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/forti-emea-se/global/firewalls/bm-mantis834748-fw-untrust-allowall",
            "log_config": [],
            "name": "bm-mantis834748-fw-untrust-allowall",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-external-vpc",
            "priority": 1000,
            "project": "forti-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/firewalls/bm-mantis834748-fw-untrust-allowall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-port2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-08-19T02:07:52.923-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/forti-emea-se/global/firewalls/bm-mantis834748-fw-trust-allowall",
            "log_config": [],
            "name": "bm-mantis834748-fw-trust-allowall",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-internal-vpc",
            "priority": 1000,
            "project": "forti-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/firewalls/bm-mantis834748-fw-trust-allowall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "ilb_fwd_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": true,
            "allow_global_access": true,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/backendServices/bm-mantis834748-bes-ilb-trust-us-central1",
            "creation_timestamp": "2022-08-19T02:08:49.627-07:00",
            "id": "projects/forti-emea-se/regions/us-central1/forwardingRules/bm-mantis834748-fwdrule-ilb-trust-us-central1",
            "ip_address": "172.20.1.3",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "bm-mantis834748-fwdrule-ilb-trust-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-internal-vpc",
            "network_tier": "PREMIUM",
            "project": "forti-emea-se",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/forwardingRules/bm-mantis834748-fwdrule-ilb-trust-us-central1",
            "subnetwork": "projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-internal-sb"
          },
          "dependencies": [
            "data.google_service_account.fgt",
            "data.http.my_ip",
            "module.fortigates.data.google_compute_default_service_account.default",
            "module.fortigates.data.google_compute_image.fgt_image",
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.fortigates.data.google_compute_zones.zones_in_region",
            "module.fortigates.google_compute_address.ext_priv",
            "module.fortigates.google_compute_address.hasync_priv",
            "module.fortigates.google_compute_address.ilb",
            "module.fortigates.google_compute_address.int_priv",
            "module.fortigates.google_compute_address.mgmt_priv",
            "module.fortigates.google_compute_address.mgmt_pub",
            "module.fortigates.google_compute_disk.logdisk",
            "module.fortigates.google_compute_instance.fgt-vm",
            "module.fortigates.google_compute_instance_group.fgt-umigs",
            "module.fortigates.google_compute_region_backend_service.ilb_bes",
            "module.fortigates.google_compute_region_health_check.health_check",
            "module.fortigates.random_string.api_key",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "fgt-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/us-central1-a/disks/bm-mantis834748-disk-logdisk1-us-central1-a"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fortigcp-project-001/global/images/fortinet-fgt-706-20220622-001-w-license",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/us-central1-a/disks/bm-mantis834748-vm1-us-central1-a"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/forti-emea-se/zones/us-central1-a/instances/bm-mantis834748-vm1-us-central1-a",
            "instance_id": "1797206279074278895",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "serial-port-enable": "true",
              "user-data": "config system global\n  set hostname bm-mantis834748-vm-us-central1-a\nend\nconfig system probe-response\n    set mode http-probe\n    set http-probe-value OK\n    set port 8008\nend\nconfig system api-user\n  edit terraform\n    set api-key 1htsrZRuITn6j29Y1t1l2tigb4DLm0\n    set accprofile \"prof_admin\"\n    config trusthost\n          edit 0\n        set ipv4-trusthost 35.189.204.201/32\n      next\n        end\n  next\nend\nconfig system sdn-connector\n    edit \ [...]
            },
            "metadata_fingerprint": "nA3trl81I_E=",
            "name": "bm-mantis834748-vm1-us-central1-a",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-external-vpc",
                "network_ip": "172.20.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-external-sb",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-internal-vpc",
                "network_ip": "172.20.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-internal-sb",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-hasync-vpc",
                "network_ip": "172.20.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-hasync-sb",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "35.193.3.8",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic3",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-mgmt-vpc",
                "network_ip": "172.20.3.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-mgmt-sb",
                "subnetwork_project": "forti-emea-se"
              }
            ],
            "project": "forti-emea-se",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/us-central1-a/instances/bm-mantis834748-vm1-us-central1-a",
            "service_account": [
              {
                "email": "fortigatesdn-ro@forti-emea-se.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "fgt"
            ],
            "tags_fingerprint": "xTla7NhEPGA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_service_account.fgt",
            "data.http.my_ip",
            "module.fortigates.data.google_compute_default_service_account.default",
            "module.fortigates.data.google_compute_image.fgt_image",
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.fortigates.data.google_compute_zones.zones_in_region",
            "module.fortigates.google_compute_address.ext_priv",
            "module.fortigates.google_compute_address.hasync_priv",
            "module.fortigates.google_compute_address.ilb",
            "module.fortigates.google_compute_address.int_priv",
            "module.fortigates.google_compute_address.mgmt_priv",
            "module.fortigates.google_compute_address.mgmt_pub",
            "module.fortigates.google_compute_disk.logdisk",
            "module.fortigates.random_string.api_key",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/us-central1-b/disks/bm-mantis834748-disk-logdisk2-us-central1-b"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fortigcp-project-001/global/images/fortinet-fgt-706-20220622-001-w-license",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/us-central1-b/disks/bm-mantis834748-vm2-us-central1-b"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/forti-emea-se/zones/us-central1-b/instances/bm-mantis834748-vm2-us-central1-b",
            "instance_id": "6210340125525863919",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "serial-port-enable": "true",
              "user-data": "config system global\n  set hostname bm-mantis834748-vm-us-central1-b\nend\nconfig system probe-response\n    set mode http-probe\n    set http-probe-value OK\n    set port 8008\nend\nconfig system api-user\n  edit terraform\n    set api-key 1htsrZRuITn6j29Y1t1l2tigb4DLm0\n    set accprofile \"prof_admin\"\n    config trusthost\n          edit 0\n        set ipv4-trusthost 35.189.204.201/32\n      next\n        end\n  next\nend\nconfig system sdn-connector\n    edit \ [...]
            },
            "metadata_fingerprint": "rssDLDQ1Tg8=",
            "name": "bm-mantis834748-vm2-us-central1-b",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-external-vpc",
                "network_ip": "172.20.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-external-sb",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-internal-vpc",
                "network_ip": "172.20.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-internal-sb",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-hasync-vpc",
                "network_ip": "172.20.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-hasync-sb",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.72.161.73",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic3",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-mgmt-vpc",
                "network_ip": "172.20.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-mgmt-sb",
                "subnetwork_project": "forti-emea-se"
              }
            ],
            "project": "forti-emea-se",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/us-central1-b/instances/bm-mantis834748-vm2-us-central1-b",
            "service_account": [
              {
                "email": "fortigatesdn-ro@forti-emea-se.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "fgt"
            ],
            "tags_fingerprint": "xTla7NhEPGA=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "data.google_service_account.fgt",
            "data.http.my_ip",
            "module.fortigates.data.google_compute_default_service_account.default",
            "module.fortigates.data.google_compute_image.fgt_image",
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.fortigates.data.google_compute_zones.zones_in_region",
            "module.fortigates.google_compute_address.ext_priv",
            "module.fortigates.google_compute_address.hasync_priv",
            "module.fortigates.google_compute_address.ilb",
            "module.fortigates.google_compute_address.int_priv",
            "module.fortigates.google_compute_address.mgmt_priv",
            "module.fortigates.google_compute_address.mgmt_pub",
            "module.fortigates.google_compute_disk.logdisk",
            "module.fortigates.random_string.api_key",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "elb_bes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/us-central1-a/instanceGroups/bm-mantis834748-umig0-us-central1-a",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/us-central1-b/instanceGroups/bm-mantis834748-umig1-us-central1-b",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "connection_tracking_policy": [
              {
                "connection_persistence_on_unhealthy_backends": "NEVER_PERSIST",
                "idle_timeout_sec": 60,
                "tracking_mode": "PER_CONNECTION"
              }
            ],
            "creation_timestamp": "2022-08-19T02:08:37.227-07:00",
            "enable_cdn": false,
            "fingerprint": "QJ-XK5rpGdg=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/healthChecks/bm-mantis834748-healthcheck-http8008-us-central1"
            ],
            "id": "projects/forti-emea-se/regions/us-central1/backendServices/bm-mantis834748-bes-elb-us-central1",
            "load_balancing_scheme": "EXTERNAL",
            "name": "bm-mantis834748-bes-elb-us-central1",
            "port_name": "http",
            "project": "forti-emea-se",
            "protocol": "UNSPECIFIED",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/backendServices/bm-mantis834748-bes-elb-us-central1",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_service_account.fgt",
            "data.http.my_ip",
            "module.fortigates.data.google_compute_default_service_account.default",
            "module.fortigates.data.google_compute_image.fgt_image",
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.fortigates.data.google_compute_zones.zones_in_region",
            "module.fortigates.google_compute_address.ext_priv",
            "module.fortigates.google_compute_address.hasync_priv",
            "module.fortigates.google_compute_address.ilb",
            "module.fortigates.google_compute_address.int_priv",
            "module.fortigates.google_compute_address.mgmt_priv",
            "module.fortigates.google_compute_address.mgmt_pub",
            "module.fortigates.google_compute_disk.logdisk",
            "module.fortigates.google_compute_instance.fgt-vm",
            "module.fortigates.google_compute_instance_group.fgt-umigs",
            "module.fortigates.google_compute_region_health_check.health_check",
            "module.fortigates.random_string.api_key",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "ilb_bes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/us-central1-a/instanceGroups/bm-mantis834748-umig0-us-central1-a",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/us-central1-b/instanceGroups/bm-mantis834748-umig1-us-central1-b",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "connection_tracking_policy": [
              {
                "connection_persistence_on_unhealthy_backends": "NEVER_PERSIST",
                "idle_timeout_sec": 600,
                "tracking_mode": "PER_CONNECTION"
              }
            ],
            "creation_timestamp": "2022-08-19T02:08:37.215-07:00",
            "enable_cdn": false,
            "fingerprint": "wjGZ2tTzfXg=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/healthChecks/bm-mantis834748-healthcheck-http8008-us-central1"
            ],
            "id": "projects/forti-emea-se/regions/us-central1/backendServices/bm-mantis834748-bes-ilb-trust-us-central1",
            "load_balancing_scheme": "INTERNAL",
            "name": "bm-mantis834748-bes-ilb-trust-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-internal-vpc",
            "project": "forti-emea-se",
            "protocol": "TCP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/backendServices/bm-mantis834748-bes-ilb-trust-us-central1",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_service_account.fgt",
            "data.http.my_ip",
            "module.fortigates.data.google_compute_default_service_account.default",
            "module.fortigates.data.google_compute_image.fgt_image",
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.fortigates.data.google_compute_zones.zones_in_region",
            "module.fortigates.google_compute_address.ext_priv",
            "module.fortigates.google_compute_address.hasync_priv",
            "module.fortigates.google_compute_address.ilb",
            "module.fortigates.google_compute_address.int_priv",
            "module.fortigates.google_compute_address.mgmt_priv",
            "module.fortigates.google_compute_address.mgmt_pub",
            "module.fortigates.google_compute_disk.logdisk",
            "module.fortigates.google_compute_instance.fgt-vm",
            "module.fortigates.google_compute_instance_group.fgt-umigs",
            "module.fortigates.google_compute_region_health_check.health_check",
            "module.fortigates.random_string.api_key",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/forti-emea-se/global/routes/bm-mantis834748-rt-default-via-fgt",
            "name": "bm-mantis834748-rt-default-via-fgt",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-internal-vpc",
            "next_hop_gateway": "",
            "next_hop_ilb": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/forwardingRules/bm-mantis834748-fwdrule-ilb-trust-us-central1",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "172.20.1.3",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "forti-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/routes/bm-mantis834748-rt-default-via-fgt",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_service_account.fgt",
            "data.http.my_ip",
            "module.fortigates.data.google_compute_default_service_account.default",
            "module.fortigates.data.google_compute_image.fgt_image",
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.fortigates.data.google_compute_zones.zones_in_region",
            "module.fortigates.google_compute_address.ext_priv",
            "module.fortigates.google_compute_address.hasync_priv",
            "module.fortigates.google_compute_address.ilb",
            "module.fortigates.google_compute_address.int_priv",
            "module.fortigates.google_compute_address.mgmt_priv",
            "module.fortigates.google_compute_address.mgmt_pub",
            "module.fortigates.google_compute_disk.logdisk",
            "module.fortigates.google_compute_forwarding_rule.ilb_fwd_rule",
            "module.fortigates.google_compute_instance.fgt-vm",
            "module.fortigates.google_compute_instance_group.fgt-umigs",
            "module.fortigates.google_compute_region_backend_service.ilb_bes",
            "module.fortigates.google_compute_region_health_check.health_check",
            "module.fortigates.random_string.api_key",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-19T02:07:52.375-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/forti-emea-se/regions/us-central1/routers/bm-mantis834748-cr-cloudnat-us-central1",
            "name": "bm-mantis834748-cr-cloudnat-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-external-vpc",
            "project": "forti-emea-se",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/routers/bm-mantis834748-cr-cloudnat-us-central1"
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fortigates",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "forti-emea-se/us-central1/bm-mantis834748-cr-cloudnat-us-central1/bm-mantis834748-nat-cloudnat-us-central1",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "bm-mantis834748-nat-cloudnat-us-central1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "forti-emea-se",
            "region": "us-central1",
            "router": "bm-mantis834748-cr-cloudnat-us-central1",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-external-sb",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.fortigates.data.google_compute_subnetwork.subnets",
            "module.fortigates.google_compute_router.nat_router",
            "module.sample_networks.google_compute_network.vpcs",
            "module.sample_networks.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.sample_networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/forti-emea-se/global/networks/bm-mantis834748-external-vpc",
            "mtu": 0,
            "name": "bm-mantis834748-external-vpc",
            "project": "forti-emea-se",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-external-vpc"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/forti-emea-se/global/networks/bm-mantis834748-internal-vpc",
            "mtu": 0,
            "name": "bm-mantis834748-internal-vpc",
            "project": "forti-emea-se",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-internal-vpc"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/forti-emea-se/global/networks/bm-mantis834748-hasync-vpc",
            "mtu": 0,
            "name": "bm-mantis834748-hasync-vpc",
            "project": "forti-emea-se",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-hasync-vpc"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/forti-emea-se/global/networks/bm-mantis834748-mgmt-vpc",
            "mtu": 0,
            "name": "bm-mantis834748-mgmt-vpc",
            "project": "forti-emea-se",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-mgmt-vpc"
          }
        }
      ]
    },
    {
      "module": "module.sample_networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-19T02:07:39.400-07:00",
            "gateway_address": "172.20.0.1",
            "id": "projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-external-sb",
            "ip_cidr_range": "172.20.0.0/24",
            "name": "bm-mantis834748-external-sb",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-external-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "forti-emea-se",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-external-sb",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.sample_networks.google_compute_network.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-19T02:07:39.884-07:00",
            "gateway_address": "172.20.1.1",
            "id": "projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-internal-sb",
            "ip_cidr_range": "172.20.1.0/24",
            "name": "bm-mantis834748-internal-sb",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-internal-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "forti-emea-se",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-internal-sb",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.sample_networks.google_compute_network.vpcs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-19T02:07:39.584-07:00",
            "gateway_address": "172.20.2.1",
            "id": "projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-hasync-sb",
            "ip_cidr_range": "172.20.2.0/24",
            "name": "bm-mantis834748-hasync-sb",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-hasync-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "forti-emea-se",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-hasync-sb",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.sample_networks.google_compute_network.vpcs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-19T02:07:39.886-07:00",
            "gateway_address": "172.20.3.1",
            "id": "projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-mgmt-sb",
            "ip_cidr_range": "172.20.3.0/24",
            "name": "bm-mantis834748-mgmt-sb",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/bm-mantis834748-mgmt-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "forti-emea-se",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/us-central1/subnetworks/bm-mantis834748-mgmt-sb",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.sample_networks.google_compute_network.vpcs"
          ]
        }
      ]
    }
  ]
}